<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.salazar.raul.registrodeusuario.confirmar_datos">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/confimar_datos"
            android:textSize="@dimen/modificardatos"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/nombre_completo"
                android:textSize="@dimen/textos_confirmar"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/tvMnombre_completo"
                android:textSize="@dimen/textos_confirmar2"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/fecha_nacimiento"
                android:textSize="@dimen/textos_confirmar"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textos_confirmar2"
                android:id="@+id/tvMfecha_naciemiento"
                android:paddingLeft="@dimen/activity_horizontal_margin"

                />
        </LinearLayout>


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/telefono"
                android:textSize="@dimen/textos_confirmar"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textos_confirmar2"

                android:id="@+id/tvMtelefono"
                android:paddingLeft="@dimen/activity_horizontal_margin"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/email"
                android:textSize="@dimen/textos_confirmar"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textos_confirmar2"

                android:id="@+id/tvMemail"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/descripcion2"
                android:textSize="@dimen/textos_confirmar"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textos_confirmar2"

                android:id="@+id/tvMdescripcion"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editar"
            android:theme="@style/MiBotonRaised"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"


            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/lados"
            android:paddingRight="@dimen/lados"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>




